third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking/naming/duplicate_acquires_list_item.exp
module 0x8675309::M {
    struct R has key {
    }
    struct X has key {
    }
    fun t0() {
        borrow_global_mut(0x1);
        borrow_global_mut(0x1);
    }
    fun t1() {
        borrow_global_mut(0x1);
        borrow_global_mut(0x1);
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: cannot use `integer` with an operator which expects a value of type `address`
  ┌─ duplicate_acquires_list_item.move:7:27
  │
7 │         borrow_global_mut(0x1);
  │                           ^^^

error: cannot use `integer` with an operator which expects a value of type `address`
  ┌─ duplicate_acquires_list_item.move:8:27
  │
8 │         borrow_global_mut(0x1);
  │                           ^^^

error: cannot use `integer` with an operator which expects a value of type `address`
   ┌─ duplicate_acquires_list_item.move:11:27
   │
11 │         borrow_global_mut(0x1);
   │                           ^^^

error: cannot use `integer` with an operator which expects a value of type `address`
   ┌─ duplicate_acquires_list_item.move:12:27
   │
12 │         borrow_global_mut(0x1);
   │                           ^^^
